Issue 69: removed unusable or redundant code wrt http error handling
git-svn-id: http://jclouds.googlecode.com/svn/trunk@1455 3d8758e0-26b5-11de-8745-db77d3ebf521